<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright © 2020 by Raytheon BBN Technologies Corp.
    *
    * This material is based upon work supported by DARPA and AFRL under Contract No. FA8750-16-C-0006.
    *
    * The Government has unlimited rights to use, modify, reproduce, release, perform, display, or
    * disclose computer software or computer software documentation marked with this legend.
    * Any reproduction of technical data, computer software, or portions thereof marked with
    * this legend must also reproduce this marking.
    *
    * DISCLAIMER LANGUAGE
    * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS
    * OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY
    * AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
    * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
    * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
    * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
    * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
    * WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    *
    * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
    * in compliance with the License.  You may obtain a copy of the License at
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software distributed under the License
    * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
    * or implied.  See the License for the specific language governing permissions and limitations
    * under the License.
    *
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_trigger"
        android:enabled="false"
        android:icon="@drawable/ic_access_alarm_white_24dp"
        android:iconTint="#FFFFFF"
        android:title="@string/action_trigger"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_pal"
        android:title="@string/action_add_pal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_policies"
        android:title="@string/action_import_policy"
        app:showAsAction="never"
        android:visible="false"/>

    <item
    android:id="@+id/action_dump_db"
    android:title="@string/action_dump_db"
    app:showAsAction="never"/>

    <item
        android:id="@+id/action_export"
        android:title="Export data"
        app:showAsAction="never"/>

</menu>